[gd_scene load_steps=3 format=3 uid="uid://ce1jr4egm8lvy"]

[ext_resource type="Script" path="res://HUD.gd" id="1_rv2ow"]
[ext_resource type="FontFile" uid="uid://b4ih28antg7il" path="res://assets/Xolonium-Regular.ttf" id="2_ipwue"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rv2ow")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 54.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ipwue")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 12.0
offset_right = -23.0
offset_bottom = 54.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_ipwue")
theme_override_font_sizes/font_size = 32
text = "Wave 1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -39.0
offset_right = 250.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_ipwue")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 75)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -106.0
offset_right = 55.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ipwue")
theme_override_font_sizes/font_size = 32
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
